force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/LWC_Field_Creator_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>LWC Field Creator Field Mapping</label>
    <pluralLabel>LWC Field Creator Field Mappings</pluralLabel>
</CustomObject>