force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Number</label>
    <type>Checkbox</type>
</CustomField>