force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currency</label>
    <type>Checkbox</type>
</CustomField>