force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date</label>
    <type>Checkbox</type>
</CustomField>