force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date/Time</label>
    <type>Checkbox</type>
</CustomField>