force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/External_Lookup_Relationship__c.field-meta.xml
<CustomField>
    <fullName>External_Lookup_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Lookup Relationship</label>
    <type>Checkbox</type>
</CustomField>