force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formula</label>
    <type>Checkbox</type>
</CustomField>