force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geolocation</label>
    <type>Checkbox</type>
</CustomField>