force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Lookup_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lookup Relationship</label>
    <type>Checkbox</type>
</CustomField>