force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Master_Detail_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Master_Detail_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master-Detail Relationship</label>
    <type>Checkbox</type>
</CustomField>