force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Metadata_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Relationship</label>
    <type>Checkbox</type>
</CustomField>