force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number</label>
    <type>Checkbox</type>
</CustomField>