force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Payload_Key__c.field-meta.xml
<CustomField>
    <fullName>Payload_Key__c</fullName>
    <label>Payload Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>