force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent</label>
    <type>Checkbox</type>
</CustomField>