force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picklist</label>
    <type>Checkbox</type>
</CustomField>