force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Picklist_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Multi_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picklist (Multi-Select)</label>
    <type>Checkbox</type>
</CustomField>