force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Roll_Up_Summary__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll-Up Summary</label>
    <type>Checkbox</type>
</CustomField>