force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text</label>
    <type>Checkbox</type>
</CustomField>