force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Long__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Area (Long)</label>
    <type>Checkbox</type>
</CustomField>