force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Text_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Text_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text (Encrypted)</label>
    <type>Checkbox</type>
</CustomField>