force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time</label>
    <type>Checkbox</type>
</CustomField>