force-app/main/default/objects/LWC_Field_Creator_Field_Mapping__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>URL</label>
    <type>Checkbox</type>
</CustomField>